lib/flux/apps/social/synapse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse
  labels:
    app.kubernetes.io/name: synapse
    app.kubernetes.io/instance: synapse
    app.kubernetes.io/component: homeserver
    app.kubernetes.io/part-of: social
spec:
  ports:
    - name: http
      port: 8008
      targetPort: http
  selector:
    app.kubernetes.io/name: synapse
    app.kubernetes.io/instance: synapse
